--- a/index.html
+++ b/index.html
@@ -3,109 +3,162 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Daftar UKM Universitas Ipwija</title>
+  <title>Daftar UKM Universitas IPWIJA</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #f0f4ff, #e5e9ff);
+      font-family: 'Georgia', serif;
+      background: linear-gradient(to bottom, #ffffff, #212d41);
+      background-size: cover;
+      background-attachment: scroll;
       margin: 0;
       padding: 0;
+      color: #e0e6f7;
+      overflow-x: hidden;
     }
+
     .container {
-      max-width: 1000px;
+      display: grid;
+      max-width: 1200px;
       margin: 40px auto;
       padding: 20px;
-      background: #ffffff;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      background: rgba(10, 15, 44, 0.85);
+      border-radius: 16px;
+      box-shadow: 0 0 40px rgba(173, 216, 230, 0.2);
+      animation: fadeInUp 1s ease-out;
+      border: 2px dashed #64b5f6;
     }
+
+    @keyframes fadeInUp {
+      0% { opacity: 0; transform: translateY(20px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
     h1 {
       text-align: center;
-      color: #3b49df;
+      color: #90caf9;
       margin-bottom: 30px;
+      font-size: 32px;
+      text-shadow: 1px 1px 3px #000;
     }
+
     .group-info {
       text-align: center;
-      color: #555;
+      color: #aac4e0;
       margin-top: 50px;
       font-size: 14px;
+      font-style: italic;
     }
+
     #filterInput {
       width: 70%;
       padding: 12px;
       margin: 0 auto 30px;
       display: block;
-      border-radius: 8px;
-      border: 1px solid #ccc;
+      border-radius: 10px;
+      background: #121933;
+      color: #e0e6f7;
+      border: 1px solid #5679b4;
       font-size: 16px;
     }
+
+    #filterInput:focus {
+      outline: none;
+      box-shadow: 0 0 6px #64b5f6;
+    }
+
     .auth-section {
       text-align: center;
       margin-bottom: 20px;
     }
-    .auth-section button {
+
+    .auth-section button,
+    #submitLoginBtn,
+    #logoutBtn {
       margin: 5px;
       padding: 12px 20px;
       border: none;
-      border-radius: 8px;
-      background: #3b49df;
-      color: white;
-      cursor: pointer;
+      border-radius: 10px;
+      background: #64b5f6;
+      color: #0a0f2c;
       font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s, transform 0.2s;
     }
-    #logoutBtn {
+
+    .auth-section button:hover,
+    #submitLoginBtn:hover,
+    #logoutBtn:hover {
+      background: #90caf9;
+      transform: scale(1.05);
+    }
+
+   #logoutBtn {
       margin-top: 10px;
-      background: #d9534f;
+      background: #ba0909;
       color: white;
       border: none;
       padding: 10px 20px;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
       display: none;
       font-weight: bold;
+      transition: background 0.3s, transform 0.2s;
     }
-    #loginForm {
-      display: none;
-      text-align: center;
-      margin: 20px 0;
+
+    #logoutBtn:hover {
+      background: #c9302c;
+      transform: scale(1.05);
     }
+
     #loginForm input {
       padding: 12px;
       margin: 8px;
       border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 16px;
+      border: 1px solid #5679b4;
+      background: #1b223e;
+      color: #e0e6f7;
+      width: 220px;
     }
+
     .ukm-list {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(4, minmax(250px, 1fr));
       gap: 20px;
+      margin-top: 20px;
     }
+
     .ukm-card {
-      padding: 20px;
-      background: #f5f7ff;
+      background: #1b223e;
       border-radius: 12px;
-      cursor: pointer;
-      transition: 0.3s;
-      border: 1px solid #ddd;
+      border: 1px solid #64b5f6;
+      padding: 20px;
+      color: #e0e6f7;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
+
     .ukm-card:hover {
-      background: #e0e4ff;
+      transform: translateY(-5px);
+      box-shadow: 0 0 15px rgba(100, 181, 246, 0.6);
     }
+
     .ukm-card h3 {
-      margin-top: 0;
-      color: #3b49df;
+      color: #64b5f6;
     }
+
     .ukm-card button {
-      margin-top: 10px;
+      background: #64b5f6;
+      color: #0a0f2c;
       padding: 10px 15px;
-      background: #3b49df;
-      color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
       font-weight: bold;
     }
+
+    .ukm-card button:hover {
+      background: #90caf9;
+    }
+
     .modal {
       display: none;
       position: fixed;
@@ -113,36 +166,49 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0,0,0,0.5);
+      background-color: rgba(10, 15, 44, 0.9);
       justify-content: center;
       align-items: center;
       z-index: 9999;
     }
+
     .modal-content {
-      background: white;
+      background: #212b49;
+      color: #e0e6f7;
       padding: 25px;
-      border-radius: 12px;
+      border-radius: 16px;
       width: 90%;
       max-width: 500px;
+      border: 1px solid #64b5f6;
     }
+
     .modal-content input {
-      width: 100%;
-      margin-bottom: 12px;
+      background: #1b223e;
+      color: #e0e6f7;
+      border: 1px solid #5679b4;
       padding: 10px;
       border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-    .modal-content button {
       width: 100%;
+      margin-bottom: 12px;
+      max-width: 500px;
+      display: block;
+      box-sizing: border-box;
+    }
+
+    .modal-content button {
+      background: #64b5f6;
+      color: #0a0f2c;
       padding: 12px;
-      background: #3b49df;
-      color: white;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       font-size: 16px;
       font-weight: bold;
+      width: 100%;
       cursor: pointer;
+    }
+
+    .modal-content button:hover {
+      background: #90caf9;
     }
   </style>
 </head>
@@ -150,14 +216,11 @@
 <div class="container">
   <div style="text-align: center;">
     <img src="https://cdn.s.id/images/d80a34be-302e-4667-9e50-452d903e25b1_1000x1000.png" alt="Logo UKM" style="max-width: 150px; margin-bottom: 10px;">
-    <h1>Pendaftaran UKM Universitas Ipwija</h1>
-  </div>s</h1>
+    <h1>Pendaftaran UKM Universitas IPWIJA</h1>
+  </div>
 
   <div class="auth-section">
-    <button id="loginUserBtn">Login sebagai User</button>
-    <button id="loginAdminBtn">Login sebagai Admin</button>
     <button id="logoutBtn">Logout</button>
-
     <div id="loginForm">
       <input type="email" id="email" placeholder="Email">
       <input type="password" id="password" placeholder="Password">
@@ -166,31 +229,36 @@
     </div>
   </div>
 
+
   <input type="text" id="filterInput" placeholder="Cari nama UKM..." style="display:none;">
   <div class="ukm-list" id="ukmList"></div>
-
-  <div class="group-info" id="groupInfo">Kelompok 4: Renaldi Sentosa, dkk.</div>
+  <div class="group-info" id="groupInfo">
+    <br> 
+      ✉ UKMUNIP@gmail.com ✆082145896729
+    <br>
 </div>
 
-<!-- Modal Form Pendaftaran -->
+<!-- Modal Form -->
 <div class="modal" id="formModal">
   <div class="modal-content">
     <h3>Form Pendaftaran UKM</h3>
     <input type="text" id="namaInput" placeholder="Nama">
     <input type="text" id="kelasInput" placeholder="Kelas">
-    <input type="number" id="semesterInput" placeholder="Semester (1-8)">
+    <input type="number" id="semesterInput" placeholder="Semester">
     <input type="text" id="prodiInput" placeholder="Program Studi">
     <input type="text" id="penyakitInput" placeholder="Riwayat Penyakit (jika ada)">
+    <input type="email" id="emailInput" placeholder="Email Mahasiswa">
     <button onclick="submitForm()">Daftar</button>
   </div>
 </div>
 
 <script type="module">
-  // Inisialisasi Supabase
   import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
   const supabase = createClient('https://fcsnwmzrpwsabsqnscwj.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZjc253bXpycHdzYWJzcW5zY3dqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDY1MTUwNDUsImV4cCI6MjA2MjA5MTA0NX0.QKBmiZGCbP79v75XE4VTG0TDmGZV-iC2vE0gOzLMeH0');
 
-  let currentLoginType = '';
+  let currentLoginType = '', selectedUKM = null;
+  let currentUserEmail = null;
+
   const loginUserBtn = document.getElementById('loginUserBtn');
   const loginAdminBtn = document.getElementById('loginAdminBtn');
   const logoutBtn = document.getElementById('logoutBtn');
@@ -198,46 +266,6 @@
   const loginForm = document.getElementById('loginForm');
   const filterInput = document.getElementById('filterInput');
   const groupInfo = document.getElementById('groupInfo');
-
-  // Tombol Login User dan Admin
-  loginUserBtn.onclick = () => { currentLoginType = 'user'; loginForm.style.display = 'block'; }
-  loginAdminBtn.onclick = () => { currentLoginType = 'admin'; loginForm.style.display = 'block'; }
-
-  // Proses Login
-  submitLoginBtn.onclick = async () => {
-    const email = document.getElementById('email').value;
-    const password = document.getElementById('password').value;
-    const { data, error } = await supabase.auth.signInWithPassword({ email, password });
-    if (error) return alert('Login gagal: ' + error.message);
-
-    if (currentLoginType === 'user' && email === 'admin@example.com') {
-      alert('Akun admin tidak bisa login sebagai user.');
-      await supabase.auth.signOut();
-      return;
-    }
-
-    if (currentLoginType === 'admin' && email === 'admin@example.com') {
-      window.location.href = 'admin.html';
-    } else if (currentLoginType === 'user') {
-      loginForm.style.display = 'none';
-      loginUserBtn.style.display = 'none';
-      loginAdminBtn.style.display = 'none';
-      logoutBtn.style.display = 'inline-block';
-      groupInfo.style.display = 'none';
-      filterInput.style.display = 'block';
-      loadUKM();
-    } else {
-      alert('Anda bukan admin.');
-      await supabase.auth.signOut();
-    }
-  };
-
-  // Logout
-  logoutBtn.onclick = async () => {
-    await supabase.auth.signOut();
-    location.reload();
-  };
-
   const ukmList = document.getElementById('ukmList');
   const formModal = document.getElementById('formModal');
   const namaInput = document.getElementById('namaInput');
@@ -245,9 +273,39 @@
   const semesterInput = document.getElementById('semesterInput');
   const prodiInput = document.getElementById('prodiInput');
   const penyakitInput = document.getElementById('penyakitInput');
-  let selectedUKM = null;
+  const emailInput = document.getElementById('emailInput');
 
-  // Load daftar UKM
+  
+
+  submitLoginBtn.onclick = async () => {
+    const email = document.getElementById('email').value.trim();
+    const password = document.getElementById('password').value.trim();
+
+    const { data, error } = await supabase.auth.signInWithPassword({ email, password });
+
+    if (error) return alert('Login gagal: ' + error.message);
+
+    currentUserEmail = email;
+
+    loginForm.style.display = 'none';
+    logoutBtn.style.display = 'inline-block';
+    groupInfo.style.display = 'none';
+
+    // Deteksi admin
+    if (email === 'admin@example.com') {
+      window.location.href = 'admin.html';
+    } else {
+      filterInput.style.display = 'block';
+      loadUKM();
+    }
+  };
+
+
+  logoutBtn.onclick = async () => {
+    await supabase.auth.signOut();
+    location.reload();
+  };
+
   async function loadUKM() {
     const { data, error } = await supabase.from('ukm').select('*');
     if (error) return alert('Gagal memuat UKM: ' + error.message);
@@ -258,16 +316,19 @@
     });
   }
 
-  // Render kartu UKM
   function renderList(list) {
     ukmList.innerHTML = list.map(ukm => `
       <div class="ukm-card">
         <h3>${ukm.nama}</h3>
-        <p><strong>Ketua:</strong> ${ukm.ketua ?? 'Tidak tersedia'}</p>
+        <details>
+          <summary>Detail UKM</summary>
+          <p><strong>Ketua:</strong> ${ukm.ketua ?? 'Tidak tersedia'}</p>
         <p><strong>Jadwal:</strong> ${ukm.jadwal ?? 'Belum ditentukan'}</p>
         <p><strong>Kontak:</strong> ${ukm.kontak ?? 'Tidak tersedia'}</p>
+        <p><strong>Lokasi:</strong> ${ukm.lokasi ?? '-'}</p>
         <p><strong>Kategori:</strong> ${ukm.kategori ?? '-'}</p>
         <button onclick='openForm(${JSON.stringify(ukm)})'>Daftar</button>
+        </details>
       </div>
     `).join('');
   }
@@ -283,45 +344,45 @@
     const semester = parseInt(semesterInput.value.trim());
     const prodi = prodiInput.value.trim();
     const penyakit = penyakitInput.value.trim().toLowerCase();
+    const email = emailInput.value.trim();
 
-    if (!nama || !kelas || !semester || !prodi) return alert('Semua field wajib diisi');
-    if (semester > 5) return alert('Semester di atas 5 tidak diperbolehkan mendaftar.');
+    if (!email || !nama || !kelas || !semester || !prodi)
+      return alert('Semua field wajib diisi');
+    if (semester > 5)
+      return alert('Semester di atas 5 tidak diperbolehkan mendaftar.');
 
     const prodiValid = ['informatika','manajemen','kebidanan','rekayasa perangkat lunak','sistem informasi'];
-    if (!prodiValid.includes(prodi.toLowerCase())) {
+    if (!prodiValid.includes(prodi.toLowerCase()))
       return alert('Prodi tidak valid. Pilih: ' + prodiValid.join(', '));
-    }
 
-    const penyakitTerlarang = ['asma','jantung','cedera','kanker'];
+    const penyakitTerlarang = ['asma','jantung','cedera','kanker', 'patah tulang', 'tuli', 'buta'];
     const isFisik = selectedUKM.kategori?.toLowerCase() === 'fisik';
-    if (isFisik && penyakitTerlarang.includes(penyakit)) {
+    if (isFisik && penyakitTerlarang.includes(penyakit))
       return alert('Karena penyakit dan UKM fisik, Anda tidak dapat mendaftar.');
-    }
 
-    const { data: cekSama } = await supabase
-      .from('pendaftaran')
-      .select('id')
-      .eq('nama', nama)
-      .eq('nama_ukm', selectedUKM.nama)
-      .eq('status', true);
+    const { data: cekSama } = await supabase.from('pendaftaran').select('id')
+      .eq('nama', nama).eq('nama_ukm', selectedUKM.nama).eq('status', true);
+    if (cekSama.length > 0)
+      return alert('Anda sudah diterima di UKM ini.');
 
-    if (cekSama.length > 0) return alert('Anda sudah diterima di UKM ini.');
+    const { data: daftarDiterima } = await supabase.from('pendaftaran').select('id').eq('nama', nama).eq('status', true); // hanya hitung yang sudah diterima
+    if (daftarDiterima.length >= 2) return alert('Anda sudah diterima di 2 UKM. Tidak bisa daftar lagi.');
 
-    const { data: semuaDaftar } = await supabase
-      .from('pendaftaran')
-      .select('id')
-      .eq('nama', nama);
 
-    if (semuaDaftar.length >= 2) return alert('Maksimal daftar 2 UKM saja.');
+    const { data: cekGanda } = await supabase.from('pendaftaran').select('id').or(`nama.eq.${nama},email.eq.${email}`).eq('status', false); // hanya yang belum diterima
+      if (cekGanda.length > 5) {
+        return alert('Nama atau email sudah pernah digunakan untuk mendaftar.');}
+
+
 
     const { error } = await supabase.from('pendaftaran').insert([{
-      nama, kelas, semester, prodi, penyakit,
+      nama, kelas, semester, prodi, penyakit, email,
       nama_ukm: selectedUKM.nama,
       kategori_ukm: selectedUKM.kategori,
       status: false
     }]);
-    if (error) return alert('Gagal mendaftar: ' + error.message);
 
+    if (error) return alert('Gagal mendaftar: ' + error.message);
     alert('Pendaftaran berhasil ke UKM ' + selectedUKM.nama);
     formModal.style.display = 'none';
   };
@@ -333,6 +394,7 @@
   window.addEventListener('DOMContentLoaded', async () => {
     const { data: { user } } = await supabase.auth.getUser();
     if (user) {
+      currentUserEmail = user.email;
       if (user.email === 'admin@example.com') {
         window.location.href = 'admin.html';
       } else {
