--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Pendaftaran Unit Kegiatan Mahasiswa Universitas IPWIJA.">
   <title>Daftar UKM Universitas IPWIJA</title>
   <style>
     body {
@@ -17,8 +18,7 @@
     }
 
     .container {
-      display: grid;
-      max-width: 1200px;
+      max-width: 1000px;
       margin: 40px auto;
       padding: 20px;
       background: rgba(10, 15, 44, 0.85);
@@ -122,7 +122,7 @@
 
     .ukm-list {
       display: grid;
-      grid-template-columns: repeat(4, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
       margin-top: 20px;
     }
@@ -190,9 +190,6 @@
       border-radius: 8px;
       width: 100%;
       margin-bottom: 12px;
-      max-width: 500px;
-      display: block;
-      box-sizing: border-box;
     }
 
     .modal-content button {
@@ -233,18 +230,17 @@
   <input type="text" id="filterInput" placeholder="Cari nama UKM..." style="display:none;">
   <div class="ukm-list" id="ukmList"></div>
   <div class="group-info" id="groupInfo">
-    <br> 
+  <br> 
       ✉ UKMUNIP@gmail.com ✆082145896729
     <br>
 </div>
 
-<!-- Modal Form -->
 <div class="modal" id="formModal">
   <div class="modal-content">
     <h3>Form Pendaftaran UKM</h3>
     <input type="text" id="namaInput" placeholder="Nama">
     <input type="text" id="kelasInput" placeholder="Kelas">
-    <input type="number" id="semesterInput" placeholder="Semester">
+    <input type="number" id="semesterInput" placeholder="Semester (1-8)">
     <input type="text" id="prodiInput" placeholder="Program Studi">
     <input type="text" id="penyakitInput" placeholder="Riwayat Penyakit (jika ada)">
     <input type="email" id="emailInput" placeholder="Email Mahasiswa">
@@ -259,8 +255,6 @@
   let currentLoginType = '', selectedUKM = null;
   let currentUserEmail = null;
 
-  const loginUserBtn = document.getElementById('loginUserBtn');
-  const loginAdminBtn = document.getElementById('loginAdminBtn');
   const logoutBtn = document.getElementById('logoutBtn');
   const submitLoginBtn = document.getElementById('submitLoginBtn');
   const loginForm = document.getElementById('loginForm');
@@ -291,7 +285,6 @@
     logoutBtn.style.display = 'inline-block';
     groupInfo.style.display = 'none';
 
-    // Deteksi admin
     if (email === 'admin@example.com') {
       window.location.href = 'admin.html';
     } else {
@@ -355,7 +348,7 @@
     if (!prodiValid.includes(prodi.toLowerCase()))
       return alert('Prodi tidak valid. Pilih: ' + prodiValid.join(', '));
 
-    const penyakitTerlarang = ['asma','jantung','cedera','kanker', 'patah tulang', 'tuli', 'buta'];
+    const penyakitTerlarang = ['asma','jantung','cedera','kanker','tuli', 'buta'];
     const isFisik = selectedUKM.kategori?.toLowerCase() === 'fisik';
     if (isFisik && penyakitTerlarang.includes(penyakit))
       return alert('Karena penyakit dan UKM fisik, Anda tidak dapat mendaftar.');
@@ -398,8 +391,6 @@
       if (user.email === 'admin@example.com') {
         window.location.href = 'admin.html';
       } else {
-        loginUserBtn.style.display = 'none';
-        loginAdminBtn.style.display = 'none';
         logoutBtn.style.display = 'inline-block';
         groupInfo.style.display = 'none';
         filterInput.style.display = 'block';
