--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
       border-radius: 8px;
       width: 100%;
       margin-bottom: 12px;
+      max-width: 500px;
+      display: block;
+      box-sizing: border-box;
     }
 
     .modal-content button {
