--- a/index.html
+++ b/index.html
@@ -253,7 +253,9 @@
 
 <script type="module">
   import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
-  const supabase = createClient('https://fcsnwmzrpwsabsqnscwj.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZjc253bXpycHdzYWJzcW5zY3dqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDY1MTUwNDUsImV4cCI6MjA2MjA5MTA0NX0.QKBmiZGCbP79v75XE4VTG0TDmGZV-iC2vE0gOzLMeH0');
+  const supabase = createClient('https://kaplrvgonynsuboogela.supabase.co', 
+  'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImthcGxydmdvbnluc3Vib29nZWxhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTI1NTA5NzMsImV4cCI6MjA2ODEyNjk3M30.Qds-eIjPpJlKnMpgJY7nJ_9Oi7QujI0LWKd3Mxce-3c'
+  );
 
   let currentLoginType = '', selectedUKM = null;
   let currentUserEmail = null;
